fix z-indexes

--- a/frontend/src/app/core/layout/architecte-layout/architecte-layout.component.scss
+++ b/frontend/src/app/core/layout/architecte-layout/architecte-layout.component.scss
@@ -26,7 +26,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 1022;
   transition: all 0.3s;
   background-color: #1C2331;
   padding-top: 30px;
@@ -39,7 +39,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9998;
+  z-index: 1021;
   transition: all 0.3s;
 }
 
